# user_behavior

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.etl  GUARDRAILS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_UPDATED.md  INCREMENTAL_STORAGE_PLAN.md  NEO4J_ETL_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION_ISSUE.md  README.md  cli.py  config.py  docker-compose.yml  investigate_neo4j_data.cypher  local-neo4j-docker-plan.md  pyproject.toml  quick_diagnostic.cypher  run_local.sh  stream_handler.py  streamlit_app.py
config/: __init__.py  instructions.py
core/: __init__.py  text_rag.py
cypher_agent/: __init__.py  agent.py  config.py  models.py  tools.py
docs/: CHUNKING_EVALUATION_PLAN.md  JUDGE_LLM_DESIGN.md  NEO4J_ETL_IMPLEMENTATION_PLAN.md  OPENAI_MIGRATION_PLAN.md  RAG_AGENT_IMPLEMENTATION_PLAN.md  REMAINING_WORK_PLAN.md  SEARCH_EVALUATION_RESULTS.md  SIMPLER_ALTERNATIVES.md  best_practices.md  continue_here.md
evals/: combined_score.py  cypher_ground_truth.json  cypher_metrics.py  evaluate.py  generate_cypher_ground_truth.py  ground_truth.json  judge.py  save_results.py  source_metrics.py  test_ground_truth.json
fetch_prep_data/: parser.py  pickle_utils.py  reader.py
mongodb_agent/: __init__.py  agent.py  config.py  models.py  tools.py
monitoring/: __init__.py  agent_logging.py  db.py  schemas.py
orchestrator/: __init__.py  agent.py  config.py  models.py  tools.py
prompt/: chunking_utils.py  llm_utils.py  models.py  prompt_builder.py  search_utils.py  vector_search.py
queries/: explore_data.cypher
(+44 files in other folders)
